--- a/SatView/Base.lproj/Main.storyboard
+++ b/SatView/Base.lproj/Main.storyboard
@@ -1,24 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SatView" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="WYB-KP-tLD">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </mapView>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="u4k-d8-cWy">
+                                <rect key="frame" x="0.0" y="44" width="414" height="51"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="u4k-d8-cWy" secondAttribute="trailing" id="AyU-MV-oRk"/>
+                            <constraint firstItem="WYB-KP-tLD" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="DdQ-g1-wGL"/>
+                            <constraint firstAttribute="bottom" secondItem="u4k-d8-cWy" secondAttribute="bottom" constant="801" id="M0x-ZV-t8g"/>
+                            <constraint firstItem="u4k-d8-cWy" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="MKb-gm-pZa"/>
+                            <constraint firstAttribute="trailing" secondItem="WYB-KP-tLD" secondAttribute="trailing" id="Na4-qh-18n"/>
+                            <constraint firstItem="WYB-KP-tLD" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="gcS-FF-cuB"/>
+                            <constraint firstItem="u4k-d8-cWy" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="44" id="r3x-dV-Xh4"/>
+                            <constraint firstAttribute="bottom" secondItem="WYB-KP-tLD" secondAttribute="bottom" id="xiP-Pe-Cc7"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="mapView" destination="WYB-KP-tLD" id="q9r-6O-UR8"/>
+                        <outlet property="searchBar" destination="u4k-d8-cWy" id="hnd-SK-FXH"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="122" y="65"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
